// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process  nodes correctly correctly creates nodes from JSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "blue": true,
      "children": Array [],
      "funny": "yup",
      "id": "a80cf8c7-9321-5444-b819-7db21df03543",
      "internal": Object {
        "contentDigest": "73901821b17d5aa9dd6026181f73b64c",
        "type": "TestCsv__Sheet1",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": false,
      "children": Array [],
      "funny": "nope",
      "id": "f6e6b6f2-ff08-5b32-9947-c0654a5e05bb",
      "internal": Object {
        "contentDigest": "f624311d932d73dcd416d2a8bea2b67d",
        "type": "TestCsv__Sheet1",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "children": Array [],
      "id": "87891cd6-0888-536e-89b8-e6f1faa2f04f",
      "internal": Object {
        "contentDigest": "10c867561d207bc7dae0455d3cccad5b",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process  nodes correctly correctly creates nodes from JSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": true,
        "children": Array [],
        "funny": "yup",
        "id": "a80cf8c7-9321-5444-b819-7db21df03543",
        "internal": Object {
          "contentDigest": "73901821b17d5aa9dd6026181f73b64c",
          "type": "TestCsv__Sheet1",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "blue,funny
TRUE,yup
FALSE,nope
",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": false,
        "children": Array [],
        "funny": "nope",
        "id": "f6e6b6f2-ff08-5b32-9947-c0654a5e05bb",
        "internal": Object {
          "contentDigest": "f624311d932d73dcd416d2a8bea2b67d",
          "type": "TestCsv__Sheet1",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "blue,funny
TRUE,yup
FALSE,nope
",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "id": "87891cd6-0888-536e-89b8-e6f1faa2f04f",
        "internal": Object {
          "contentDigest": "10c867561d207bc7dae0455d3cccad5b",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "blue,funny
TRUE,yup
FALSE,nope
",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
]
`;
